@@ -12,6 +12,9 @@ What's New in Python 3.2 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #7604: Deleting an unset slotted attribute did not raise an
+  AttributeError.
+
 - Issue #7534: Fix handling of IEEE specials (infinities, nans,
   negative zero) in ** operator.  The behaviour now conforms to that
   described in C99 Annex F.
